# articulat_bot

./: README.md
src/my_bot/: package.xml  setup.py
src/my_bot/config/: my_map.pgm  my_map.yaml  ros_gz_bridge.yaml  view_bot.rviz
src/my_bot/description/: camera.xacro  gz_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/my_bot/launch/: launch_sim.launch.py  mapping.launch.py  rsp.launch.py  view_bot.launch.py
src/my_bot/worlds/: cafe.world  empty.world  obstacles.sdf  world.sdf
